# grtlng

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.gl  grtlng definition
src/: error.c  error.h  global.h  lexer.c  lexer.h  main.c  parser.c  parser.h
src/debug/: debugInfos.c  parser.c  parser.h
src/interpret/: interpreter.c  value.h
src/parser/: expressions.c  expressions.h  globalScope.c  parseUtils.c  parseUtils.h  parser.c  parser.h  scoping.c  scoping.h  statements.c  statements.h
src/util/: ArenaAllocator.c  ArenaAllocator.h  ArrayList.c  ArrayList.h  HashMap.c  HashMap.h
